Fix text align on account wrapper

--- a/less/gluon/account.less
+++ b/less/gluon/account.less
@@ -24,6 +24,7 @@
 
 .account-wrapper {
     margin-top: 50px;
+    text-align: left;
 
     .logo-wrapper {
         padding-bottom: 41px;
